--- a/assets/styles/animations.css
+++ b/assets/styles/animations.css
@@ -10,11 +10,48 @@
     }
 }
 
+@keyframes appearances {
+
+    from {
+        right: 190%;
+    }   
+    to {
+        right: 0px;
+    }
+
+}
+
+.anim-appearances {
+    position: relative;
+    animation: appearances 2s ease-in-out 4ms 1;
+}
+
+.anim-appearances div:nth-child(2) {
+    animation-duration: 2.7s;
+     animation-delay: 6ms;
+}
+
+.anim-appearances div:nth-child(3) {
+      animation-duration: 2.7s;
+       animation-delay: 8ms;
+}
+
+.anim-appearances div:nth-child(4) {
+    animation-duration: 3.7s;
+    animation-delay: 9ms;
+}
+
 .initial-section__content {
     opacity: 1;
+}
+
+.survey-help {
+    position: relative;
+    right: 190%;
 }
 
 .anim-down-top {
     position: relative;
     animation: down-top 2s ease-in-out 1ms 1;
 }
+
