add animation three section blocks

--- a/assets/styles/animations.css
+++ b/assets/styles/animations.css
@@ -24,19 +24,24 @@
 .anim-appearances {
     position: relative;
     animation: appearances 2s ease-in-out 4ms 1;
+   
 }
 
-.anim-appearances div:nth-child(2) {
+.anim-appearances-reverse {
+    animation: appearances 2s reverse 4ms 1;
+}
+
+.anim-appearances div:nth-child(2), .anim-appearances-reverse:nth-child(2) {
     animation-duration: 2.7s;
      animation-delay: 6ms;
 }
 
-.anim-appearances div:nth-child(3) {
+.anim-appearances div:nth-child(3), .anim-appearances-reverse:nth-child(3) {
       animation-duration: 2.7s;
        animation-delay: 8ms;
 }
 
-.anim-appearances div:nth-child(4) {
+.anim-appearances div:nth-child(4), .anim-appearances-reverse:nth-child(4) {
     animation-duration: 3.7s;
     animation-delay: 9ms;
 }
@@ -55,3 +60,12 @@
     animation: down-top 2s ease-in-out 1ms 1;
 }
 
+.examples-professions__blocks div {
+    transition: padding 2s, box-shadow 2s;
+}
+
+.examples-professions__blocks div:hover {
+    padding: 0px 0px 20px 30px;
+    box-shadow:  12px 12px 2px 1px #aca6a6;
+}
+   
