--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -136,7 +136,7 @@
     font-family: 'Montserrat';
 }
 .examples-professions {
-    padding: 60px 0 60px 0
+    padding: 60px 0 200px 0
 }
 .examples-professions__title {
     font-size: 64px;
@@ -189,7 +189,7 @@
 }
 .modal-reg,
 .modal-auth {
-    display: none;
+    display: flex;
     justify-content: center;
     align-items: center;
     position: fixed;
@@ -199,12 +199,16 @@
     height: 100vh;
     z-index: 1000;
     background-color: rgba(0, 0, 0, 0.322);
+    transform: translateY(-1000px);
+    transition: 0.5s;
 }
 .modal-reg-on {
-    display: flex;
+    transform: translateY(0px);
+    transition: 0.4s;
 }
 .modal-auth-on {
-    display: flex;
+    transform: translateY(0px);
+    transition: 0.4s;
 }
 .modal-reg__content,
 .modal-auth__content {
@@ -292,3 +296,101 @@ input:focus{
     box-shadow: 0 5px 15px rgba(0,0,0,0.3);
     min-width: 300px;
   }
+.footer {
+    width: 100%;
+    height: 250px;
+    background-color: #3B77E1;
+}
+.footer__content {
+    display: flex;
+    justify-content: space-between;
+    padding: 30px 10vw 30px 10vw;
+    margin: 0 auto;
+    background-color: #3B77E1;
+}
+.footer__title {
+    font-size: 24px;
+    color: white;
+    font-family: 'Montserrat';
+}
+.footer__description {
+    padding-top: 30px;
+    font-size: 20px;
+    font-family: 'Montserrat';
+    color: white;
+    max-width: 450px;
+}
+.footer__telephone__wrapper {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+.footer__contacts__title {
+    font-size: 24px;
+    color: white;
+    font-family: 'Montserrat';
+}
+.footer__contacts {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+.footer__telephone {
+    font-size: 20px;
+    color: white;
+    font-family: 'Montserrat';
+}
+.telephone-icon {
+    width: 20px;
+    height: 20px;
+}
+.footer__socials__title {
+    font-size: 24px;
+    color: white;
+    font-family: 'Montserrat';
+}
+.footer__socials {
+    display: flex;
+    gap: 20px;
+    flex-direction: column;
+}
+.footer__socials__wrapper {
+    display: flex;
+    gap: 20px;
+}
+.footer__social-icon {
+    cursor: pointer;
+}
+.footer__college {
+    font-size: 20px;
+    color: white;
+    font-family: 'Montserrat';
+    text-decoration: underline;
+    cursor: pointer;
+}
+.sub-footer {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    height: 70px;
+    background-color: rgb(37, 37, 37);
+    padding: 0 10vw 0 10vw;
+}
+.sub-footer__title {
+    display: flex;
+    gap: 10px;
+    font-size: 20px;
+    font-family: 'Montserrat';
+    color: white;
+}
+.sub-footer__name {
+    text-decoration: underline;
+    cursor: pointer;
+}
+.sub-footer__confidentiality {
+    font-family: 'Montserrat';
+    color: white;
+    font-size: 20px;
+    cursor: pointer;
+}
