--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -314,6 +314,8 @@ input:focus{
     font-family: 'Montserrat';
 }
 .footer__description {
+    width: 450px;
+    height: 210px;
     padding-top: 30px;
     font-size: 20px;
     font-family: 'Montserrat';
